[package]
name = "docker-guard"
version = "0.0.0"
authors = ["oblique <psyberbits@gmail.com>"]
license = "MIT"

[dependencies]
httparse = "1.2.4"
epoll = "4.0.0"
fs2 = "0.4.3"
error-chain = "0.12.0"
regex = "1.0.1"
serde_json = "1.0.22"
config = "0.9.0"
clap = "2.32.0"
log = "0.4.3"
env_logger = "0.5.10"
url = "1.7.1"
